--- a/Controls/Compass.xaml
+++ b/Controls/Compass.xaml
@@ -3,117 +3,109 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:animations="using:CommunityToolkit.WinUI.Animations"
+    xmlns:controls="using:cycloid.Controls"
     xmlns:cycloid="using:cycloid"
-    xmlns:media="using:CommunityToolkit.WinUI.Media"
     xmlns:ui="using:CommunityToolkit.WinUI"
     Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfNotNull(Point)}">
 
-    <Border>
-        <ui:Effects.Shadow>
-            <media:AttachedCardShadow Offset="2,8" Color="#60000000" />
-        </ui:Effects.Shadow>
+    <controls:MapControlBorder>
 
-        <Border
-            Padding="5"
-            Background="{ThemeResource MapOverlayBackgroundBrush}"
-            CornerRadius="5"
-            UseLayoutRounding="False">
-            <Grid Width="80" Height="80">
-                <Grid
-                    x:Name="Grid"
-                    ui:VisualExtensions.CenterPoint="40,40,0"
-                    ui:VisualExtensions.RotationAngleInDegrees="{x:Bind Mode=OneWay, Path=HeadingToRotationAngle(Point.Value.Heading)}">
-                    <animations:Implicit.Animations>
-                        <animations:RotationInDegreesAnimation Duration="0:0:1" />
-                    </animations:Implicit.Animations>
-                    <Grid.Resources>
-                        <Style TargetType="Ellipse">
+        <Grid Width="80" Height="80">
+            <Grid
+                x:Name="Grid"
+                ui:VisualExtensions.CenterPoint="40,40,0"
+                ui:VisualExtensions.RotationAngleInDegrees="{x:Bind Mode=OneWay, Path=HeadingToRotationAngle(Point.Value.Heading)}">
+                <animations:Implicit.Animations>
+                    <animations:RotationInDegreesAnimation Duration="0:0:1" />
+                </animations:Implicit.Animations>
+                <Grid.Resources>
+                    <Style TargetType="Ellipse">
+                        <Setter Property="Stroke" Value="{ThemeResource TextFillColorDisabledBrush}" />
+                        <Setter Property="StrokeThickness" Value="2.5" />
+                    </Style>
+                    <Style TargetType="TextBlock">
+                        <Setter Property="Foreground" Value="{ThemeResource TextFillColorPrimaryBrush}" />
+                        <Setter Property="FontFamily" Value="Arial Rounded MT" />
+                        <Setter Property="FontSize" Value="11.5" />
+                        <Setter Property="RenderTransformOrigin" Value=".5,.5" />
+                        <Setter Property="HorizontalAlignment" Value="Center" />
+                        <Setter Property="VerticalAlignment" Value="Center" />
+                    </Style>
+                </Grid.Resources>
+
+                <Ellipse Width="80" Height="80" />
+                <Ellipse Width="54.4" Height="54.4" />
+
+                <TextBlock Text="N">
+                    <TextBlock.RenderTransform>
+                        <CompositeTransform Rotation="0" TranslateY="-32.5" />
+                    </TextBlock.RenderTransform>
+                </TextBlock>
+                <TextBlock Text="S">
+                    <TextBlock.RenderTransform>
+                        <CompositeTransform Rotation="180" TranslateY="32.5" />
+                    </TextBlock.RenderTransform>
+                </TextBlock>
+                <TextBlock Text="W">
+                    <TextBlock.RenderTransform>
+                        <CompositeTransform Rotation="-90" TranslateX="-32.5" />
+                    </TextBlock.RenderTransform>
+                </TextBlock>
+                <TextBlock Text="E">
+                    <TextBlock.RenderTransform>
+                        <CompositeTransform Rotation="90" TranslateX="32.5" />
+                    </TextBlock.RenderTransform>
+                </TextBlock>
+
+                <Canvas>
+                    <Canvas.RenderTransform>
+                        <TranslateTransform X="40" Y="40" />
+                    </Canvas.RenderTransform>
+                    <Canvas.Resources>
+                        <Style TargetType="Line">
+                            <Setter Property="StrokeEndLineCap" Value="Round" />
+                            <Setter Property="StrokeStartLineCap" Value="Round" />
+                            <Setter Property="StrokeThickness" Value="1.5" />
                             <Setter Property="Stroke" Value="{ThemeResource TextFillColorDisabledBrush}" />
-                            <Setter Property="StrokeThickness" Value="2.5" />
                         </Style>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="Foreground" Value="{ThemeResource TextFillColorPrimaryBrush}" />
-                            <Setter Property="FontFamily" Value="Arial Rounded MT" />
-                            <Setter Property="FontSize" Value="11.5" />
-                            <Setter Property="RenderTransformOrigin" Value=".5,.5" />
-                            <Setter Property="HorizontalAlignment" Value="Center" />
-                            <Setter Property="VerticalAlignment" Value="Center" />
-                        </Style>
-                    </Grid.Resources>
-
-                    <Ellipse Width="80" Height="80" />
-                    <Ellipse Width="54.4" Height="54.4" />
-
-                    <TextBlock Text="N">
-                        <TextBlock.RenderTransform>
-                            <CompositeTransform Rotation="0" TranslateY="-32.5" />
-                        </TextBlock.RenderTransform>
-                    </TextBlock>
-                    <TextBlock Text="S">
-                        <TextBlock.RenderTransform>
-                            <CompositeTransform Rotation="180" TranslateY="32.5" />
-                        </TextBlock.RenderTransform>
-                    </TextBlock>
-                    <TextBlock Text="W">
-                        <TextBlock.RenderTransform>
-                            <CompositeTransform Rotation="-90" TranslateX="-32.5" />
-                        </TextBlock.RenderTransform>
-                    </TextBlock>
-                    <TextBlock Text="E">
-                        <TextBlock.RenderTransform>
-                            <CompositeTransform Rotation="90" TranslateX="32.5" />
-                        </TextBlock.RenderTransform>
-                    </TextBlock>
-
-                    <Canvas>
-                        <Canvas.RenderTransform>
-                            <TranslateTransform X="40" Y="40" />
-                        </Canvas.RenderTransform>
-                        <Canvas.Resources>
-                            <Style TargetType="Line">
-                                <Setter Property="StrokeEndLineCap" Value="Round" />
-                                <Setter Property="StrokeStartLineCap" Value="Round" />
-                                <Setter Property="StrokeThickness" Value="1.5" />
-                                <Setter Property="Stroke" Value="{ThemeResource TextFillColorDisabledBrush}" />
-                            </Style>
-                        </Canvas.Resources>
-                        <Line
-                            X1="21.6"
-                            X2="24.8"
-                            Y1="21.6"
-                            Y2="24.8" />
-                        <Line
-                            X1="-21.6"
-                            X2="-24.8"
-                            Y1="21.6"
-                            Y2="24.8" />
-                        <Line
-                            X1="-21.6"
-                            X2="-24.8"
-                            Y1="-21.6"
-                            Y2="-24.8" />
-                        <Line
-                            X1="21.6"
-                            X2="24.8"
-                            Y1="-21.6"
-                            Y2="-24.8" />
-                    </Canvas>
-                </Grid>
-                <Grid>
-                    <Ellipse
-                        Width="47"
-                        Height="47"
-                        Stroke="{x:Bind Mode=OneWay, Path=cycloid:Convert.GradientToBrush(Point.Value.Gradient)}"
-                        StrokeThickness="4" />
-                    <TextBlock
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        FontSize="11"
-                        Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Gradient(Point.Value.Gradient)}"
-                        TextLineBounds="Tight" />
-                </Grid>
+                    </Canvas.Resources>
+                    <Line
+                        X1="21.6"
+                        X2="24.8"
+                        Y1="21.6"
+                        Y2="24.8" />
+                    <Line
+                        X1="-21.6"
+                        X2="-24.8"
+                        Y1="21.6"
+                        Y2="24.8" />
+                    <Line
+                        X1="-21.6"
+                        X2="-24.8"
+                        Y1="-21.6"
+                        Y2="-24.8" />
+                    <Line
+                        X1="21.6"
+                        X2="24.8"
+                        Y1="-21.6"
+                        Y2="-24.8" />
+                </Canvas>
             </Grid>
-        </Border>
-    </Border>
+            <Grid>
+                <Ellipse
+                    Width="47"
+                    Height="47"
+                    Stroke="{x:Bind Mode=OneWay, Path=cycloid:Convert.GradientToBrush(Point.Value.Gradient)}"
+                    StrokeThickness="4" />
+                <TextBlock
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    FontSize="11"
+                    Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Gradient(Point.Value.Gradient)}"
+                    TextLineBounds="Tight" />
+            </Grid>
+        </Grid>
+
+    </controls:MapControlBorder>
 
 </UserControl>
