--- a/Controls/MapHoverPointValues.xaml
+++ b/Controls/MapHoverPointValues.xaml
@@ -1,5 +1,5 @@
-﻿<UserControl
-    x:Class="cycloid.Controls.PointValuesBase"
+﻿<controls:PointValuesBase
+    x:Class="cycloid.Controls.MapHoverPointValues"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:cycloid.Controls"
@@ -8,7 +8,8 @@
     Margin="5"
     maps:MapControl.Location="{x:Bind Mode=OneWay, Path=cycloid:Convert.ToGeopoint(Point)}"
     maps:MapControl.NormalizedAnchorPoint="0 1"
-    Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIf(IsVisible)}">
+    Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIf(IsVisible)}"
+    >
 
     <controls:MapControlBorder>
         
@@ -59,4 +60,4 @@
         
     </controls:MapControlBorder>
 
-</UserControl>
+</controls:PointValuesBase>
