--- a/Controls/StreetView.xaml
+++ b/Controls/StreetView.xaml
@@ -2,8 +2,8 @@
     x:Class="cycloid.Controls.StreetView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:cycloid.Controls"
     xmlns:behaviors="using:cycloid.Behaviors"
+    xmlns:controls="using:cycloid.Controls"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:ui="using:CommunityToolkit.WinUI">
 
@@ -11,20 +11,20 @@
         <behaviors:DragableBehavior x:Name="DragableBehavior" />
     </interactivity:Interaction.Behaviors>
 
-    <Grid>
-        <controls:MapControlBorder
-            x:Name="Expanded"
-            IsHitTestVisible="True"
-            Visibility="Visible">
-            <controls:MapControlBorder.RenderTransform>
-                <ScaleTransform x:Name="ExpandedScale" />
-            </controls:MapControlBorder.RenderTransform>
+    <controls:MapControlBorder x:Name="Root" IsHitTestVisible="True">
+        <controls:MapControlBorder.RenderTransform>
+            <CompositeTransform />
+        </controls:MapControlBorder.RenderTransform>
 
-            <Grid>
+        <Grid>
+
+            <Grid x:Name="Expanded" Visibility="Visible">
                 <Image
                     x:Name="Image"
                     Width="{x:Bind Mode=OneWay, Path=ImageWidth}"
-                    Height="{x:Bind Mode=OneWay, Path=ImageHeight}">
+                    Height="{x:Bind Mode=OneWay, Path=ImageHeight}"
+                    ImageFailed="Image_ImageFailed"
+                    ImageOpened="Image_ImageOpened">
                     <Image.Source>
                         <BitmapImage x:Name="ImageSource" />
                     </Image.Source>
@@ -40,40 +40,41 @@
                     SnapsTo="StepValues"
                     StepFrequency="10"
                     Value="{x:Bind Mode=TwoWay, Path=HeadingOffset}" />
-                <Button
-                    x:Name="CollapseButton"
+                <Grid
                     Margin="10"
                     HorizontalAlignment="Right"
-                    VerticalAlignment="Top"
-                    Content="{ui:SymbolIcon Symbol=Cancel}" />
+                    VerticalAlignment="Top">
+                    <Border
+                        Margin="1"
+                        Background="Black"
+                        CornerRadius="4"
+                        Opacity=".5" />
+                    <Button Click="CollapseButton_Click" Content="{ui:SymbolIcon Symbol=Cancel}" />
+                </Grid>
             </Grid>
 
-        </controls:MapControlBorder>
+            <Grid x:Name="Collapsed" Visibility="Collapsed">
+                <Border
+                    Margin="1"
+                    Background="Black"
+                    CornerRadius="4"
+                    Opacity=".5" />
+                <Button Click="ExpandButton_Click" Content="{ui:SymbolIcon Symbol=Camera}" />
+            </Grid>
 
-        <controls:MapControlBorder
-            x:Name="Collapsed"
-            IsHitTestVisible="True"
-            Visibility="Collapsed">
+            <Ellipse
+                Width="5"
+                Height="5"
+                Margin="5"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Fill="Red"
+                Visibility="{x:Bind Mode=OneWay, Path=RequestPending}" />
 
-            <Button
-                x:Name="ExpandButton"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Bottom"
-                Content="{ui:SymbolIcon Symbol=Camera}" />
-
-        </controls:MapControlBorder>
-
-        <Ellipse
-            Width="5"
-            Height="5"
-            Margin="5"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Fill="Red"
-            Visibility="{x:Bind Mode=OneWay, Path=RequestPending}" />
+        </Grid>
 
         <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup x:Name="ApplicationViewStates">
+            <VisualStateGroup x:Name="ApplicationViewStates" CurrentStateChanged="ApplicationViewStates_CurrentStateChanged">
                 <VisualStateGroup.Transitions>
                     <VisualTransition GeneratedDuration="0:0:0.2" To="CollapsedState" />
                     <VisualTransition GeneratedDuration="0:0:0.1" To="ExpandedState" />
@@ -86,21 +87,35 @@
                             Storyboard.TargetProperty="Opacity"
                             To="0" />
                         <DoubleAnimation
-                            Storyboard.TargetName="Expanded"
-                            Storyboard.TargetProperty="(Border.RenderTransform).(ScaleTransform.ScaleX)"
-                            To="0.8" />
+                            x:Name="ScaleXAnimation"
+                            Storyboard.TargetName="Root"
+                            Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" />
                         <DoubleAnimation
-                            Storyboard.TargetName="Expanded"
-                            Storyboard.TargetProperty="(Border.RenderTransform).(ScaleTransform.ScaleY)"
-                            To="0.8" />
+                            x:Name="ScaleYAnimation"
+                            Storyboard.TargetName="Root"
+                            Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)" />
+                        <DoubleAnimation
+                            x:Name="TranslateXAnimation"
+                            Storyboard.TargetName="Root"
+                            Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateX)" />
+                        <DoubleAnimation
+                            x:Name="TranslateYAnimation"
+                            Storyboard.TargetName="Root"
+                            Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" />
                     </Storyboard>
                     <VisualState.Setters>
                         <Setter Target="Expanded.Visibility" Value="Collapsed" />
                         <Setter Target="Collapsed.Visibility" Value="Visible" />
+                        <Setter Target="Root.Opacity" Value="1" />
+                        <Setter Target="Root.RenderTransform">
+                            <Setter.Value>
+                                <CompositeTransform />
+                            </Setter.Value>
+                        </Setter>
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
-    </Grid>
+    </controls:MapControlBorder>
 
 </UserControl>
