--- a/Controls/MapCurrentPointValues.xaml
+++ b/Controls/MapCurrentPointValues.xaml
@@ -2,8 +2,9 @@
     x:Class="cycloid.Controls.MapCurrentPointValues"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="using:cycloid.Controls"
     xmlns:cycloid="using:cycloid"
-    xmlns:controls="using:cycloid.Controls">
+    Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfNotNull(Point)}">
 
     <controls:MapControlBorder>
 
@@ -11,13 +12,13 @@
             Width="150"
             ColumnSpacing="4"
             RowSpacing="4">
-            
+
             <Grid.Resources>
                 <Style BasedOn="{StaticResource BaseTextBlockStyle}" TargetType="TextBlock">
                     <Setter Property="FontSize" Value="11" />
                 </Style>
             </Grid.Resources>
-            
+
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition />
