--- a/Controls/Compass.xaml
+++ b/Controls/Compass.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<controls:PointControl
     x:Class="cycloid.Controls.Compass"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -6,7 +6,7 @@
     xmlns:controls="using:cycloid.Controls"
     xmlns:cycloid="using:cycloid"
     xmlns:ui="using:CommunityToolkit.WinUI"
-    Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfNotNull(Point)}">
+    Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfValid(Point)}">
 
     <controls:MapControlBorder>
 
@@ -14,7 +14,7 @@
             <Grid
                 x:Name="Grid"
                 ui:VisualExtensions.CenterPoint="40,40,0"
-                ui:VisualExtensions.RotationAngleInDegrees="{x:Bind Mode=OneWay, Path=HeadingToRotationAngle(Point.Value.Heading)}">
+                ui:VisualExtensions.RotationAngleInDegrees="{x:Bind Mode=OneWay, Path=HeadingToRotationAngle(Point.Heading)}">
                 <animations:Implicit.Animations>
                     <animations:RotationInDegreesAnimation Duration="0:0:1" />
                 </animations:Implicit.Animations>
@@ -95,17 +95,17 @@
                 <Ellipse
                     Width="47"
                     Height="47"
-                    Stroke="{x:Bind Mode=OneWay, Path=cycloid:Convert.GradientToBrush(Point.Value.Gradient)}"
+                    Stroke="{x:Bind Mode=OneWay, Path=cycloid:Convert.GradientToBrush(Point.Gradient)}"
                     StrokeThickness="4" />
                 <TextBlock
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     FontSize="11"
-                    Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Gradient(Point.Value.Gradient)}"
+                    Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Gradient(Point.Gradient)}"
                     TextLineBounds="Tight" />
             </Grid>
         </Grid>
 
     </controls:MapControlBorder>
 
-</UserControl>
+</controls:PointControl>
