--- a/Controls/Map.xaml
+++ b/Controls/Map.xaml
@@ -58,7 +58,7 @@
                 <Ellipse
                     Width="8"
                     Height="8"
-                    Fill="{x:Bind Mode=OneWay, Path=cycloid:Convert.GradientToBrush(ViewModel.CurrentPoint.Value.Gradient)}" />
+                    Fill="{x:Bind Mode=OneWay, Path=cycloid:Convert.GradientToBrush(ViewModel.CurrentPoint.Gradient)}" />
             </Grid>
         </Border>
 
