--- a/Controls/MapCurrentPointValues.xaml
+++ b/Controls/MapCurrentPointValues.xaml
@@ -1,10 +1,10 @@
-﻿<controls:PointValuesBase
+﻿<controls:PointValuesControl
     x:Class="cycloid.Controls.MapCurrentPointValues"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:cycloid.Controls"
     xmlns:cycloid="using:cycloid"
-    Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfNotNull(Point)}">
+    Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfValid(Point)}">
 
     <controls:MapControlBorder>
 
@@ -35,7 +35,7 @@
                 Grid.ColumnSpan="4"
                 HorizontalAlignment="Stretch"
                 HorizontalTextAlignment="Center"
-                Text="{x:Bind Mode=OneWay, Path=FilePosition(Point.Value)}" />
+                Text="{x:Bind Mode=OneWay, Path=FilePosition(Point)}" />
 
             <FontIcon
                 Grid.Row="1"
@@ -47,18 +47,18 @@
                 Grid.Row="1"
                 Grid.Column="1"
                 HorizontalTextAlignment="Left">
-                <Run Text="{x:Bind Mode=OneWay, Path=DistanceFromStart(Point.Value)}" />
+                <Run Text="{x:Bind Mode=OneWay, Path=DistanceFromStart(Point)}" />
                 <LineBreak />
-                <Run Text="{x:Bind Mode=OneWay, Path=TimeFromStart(Point.Value)}" />
+                <Run Text="{x:Bind Mode=OneWay, Path=TimeFromStart(Point)}" />
             </TextBlock>
 
             <TextBlock
                 Grid.Row="1"
                 Grid.Column="2"
                 HorizontalTextAlignment="Right">
-                <Run Text="{x:Bind Mode=OneWay, Path=DistanceToEnd(Point.Value)}" />
+                <Run Text="{x:Bind Mode=OneWay, Path=DistanceToEnd(Point)}" />
                 <LineBreak />
-                <Run Text="{x:Bind Mode=OneWay, Path=TimeToEnd(Point.Value)}" />
+                <Run Text="{x:Bind Mode=OneWay, Path=TimeToEnd(Point)}" />
             </TextBlock>
             <FontIcon
                 Grid.Row="1"
@@ -74,7 +74,7 @@
                 Data="M5.3,6.2 L3.5,3 1,8 10,8 7,0 4.6,4.6"
                 Stroke="{ThemeResource TextFillColorPrimary}" />
             <TextBlock Grid.Row="2" Grid.Column="1">
-                <Run Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Altitude(Point.Value.Altitude)}" />
+                <Run Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Altitude(Point.Altitude)}" />
             </TextBlock>
 
             <FontIcon
@@ -87,10 +87,10 @@
                 Grid.Row="2"
                 Grid.Column="2"
                 HorizontalTextAlignment="Right">
-                <Run Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Speed(Point.Value.Speed)}" />
+                <Run Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Speed(Point.Speed)}" />
             </TextBlock>
         </Grid>
 
     </controls:MapControlBorder>
 
-</controls:PointValuesBase>
+</controls:PointValuesControl>
